--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,8 @@
 ENV = 'development'
 
 # 若依管理系统/开发环境
-# ___VUE_APP_BASE_API = 'http://192.168.11.23:8088/dev-api'
-VUE_APP_BASE_API = 'http://os.blackview.hk/dev-api'
+VUE_APP_BASE_API = 'http://192.168.11.23:8088/dev-api'
+
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
